# ccc-linz-oct2024

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
ccc/: __main__.py  contest.py  scratchpad.ipynb  utils.py
data/: level2_1.out  level2_2.out  level2_3.out  level2_4.out  level2_5.out  level3_1.out  level3_2.out  level3_3.out  level3_4.out  level3_5.out  level3_example.out
