[tool.poetry]
name = "ccc"
version = "0.1.0"
description = "My solutions for the Cloudflight Coding Contest, written in Python."
authors = ["Mario Kahlhofer <mario.kahlhofer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.2"
scipy = "^1.14.1"
networkx = "^3.4.2"
matplotlib = "^3.9.2"
funcy = "^2.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
